force-app/main/default/staticresources/python/Disappear/src/objects/Pub_Prod_Ind__c.object
<CustomObject>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipLabel>Publication Product  Indications</relationshipLabel>
        <relationshipName>Publication_Product_Indications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Product  Indications</relationshipLabel>
        <relationshipName>Publication_Product_Indications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEnbrel__c</fullName>
        <formula>Product_Indication__r.isEnbrel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isEnbrel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Product Indication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Product  Indication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Product_Indication__c</columns>
        <columns>isKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Product  Indication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Product  Indications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>